[package]
name = "sigi-gtk"
version = "0.1.0"
authors = ["J.R. Hill <hiljusti@so.dang.cool>"]
edition = "2021"
license = "GPL-2.0-only"
description = "Sigi (GTK): An organizing tool and no-frills stack database."
readme = "README.md"
homepage = "https://github.com/hiljusti/sigi-gtk"
repository = "https://github.com/hiljusti/sigi-gtk"
# documentation = "TODO! Maybe github pages"
keywords = ["organization", "planning", "stack", "todo", "cli"]
categories = ["command-line-interface", "database-implementations"]

[badges]
maintenance = { status = "actively-developed" }

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

[dependencies]
sigi = "3.0.0"
gtk4 = "0.3.1"
